--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <style name="CeibalTheme" parent="android:Theme.Holo.Light">
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="progressColor">#ffffff</item>
+        <item name="numberColor">@color/gray_dark</item>
+
+        <item name="autoCompleteTitleColor">@color/black</item>
+        <item name="autoCompleteUrlColor">@color/gray_medium</item>
+        
+        <item name="arrowBackDrawable">@drawable/ic_action_back</item>
+        <item name="arrowForwardDrawable">@drawable/ic_action_forward</item>
+        <item name="android:actionBarStyle">@style/CeibalActionBar</item>
+		<item name="android:icon">@android:color/transparent</item>
+    </style>
+    
+    <style name="CeibalActionBar" parent="android:Widget.Holo.Light.ActionBar.Solid">
+        <item name="android:background">#ffdb00</item>
+    </style>
+    
+    
     <style name="DefaultTheme" parent="android:Theme.Holo.Light">
         <item name="progressColor">@color/gray_medium</item>
         <item name="arrowBackDrawable">@drawable/ic_action_back</item>
@@ -8,11 +27,6 @@
         <item name="autoCompleteTitleColor">@color/black</item>
         <item name="autoCompleteUrlColor">@color/gray_medium</item>
         <item name="arrowForwardDrawable">@drawable/ic_action_forward</item>
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
     </style>
 
     <!-- Application theme. -->
@@ -25,11 +39,6 @@
         <item name="autoCompleteUrlColor">@color/gray_medium</item>
         <item name="arrowForwardDrawable">@drawable/ic_action_forward</item>
         <item name="android:actionBarStyle">@style/LightActionBar</item>
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
     </style>
 
     <style name="DarkTheme" parent="android:Theme.Holo.Light.DarkActionBar">
@@ -42,7 +51,7 @@
         <item name="arrowForwardDrawable">@drawable/ic_action_forward_dark</item>
         <item name="android:actionBarStyle">@style/DarkActionBar</item>
     </style>
-
+        
     <style name="DarkActionBar" parent="android:Widget.Holo.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/gray_dark</item>
     </style>
@@ -51,6 +60,7 @@
         <item name="android:background">@color/gray_light</item>
     </style>
 
+    
     <style name="boldText">
         <item name="android:textStyle">bold</item>
     </style>
