--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,96 +1,119 @@
 <!-- Copyright 2014 ACR Development -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
 
     <LinearLayout
-        android:id="@+id/progressWrapper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?progressColor"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical" >
 
-        <ProgressBar
-            android:id="@+id/activity_bar"
+        <LinearLayout
+            android:id="@+id/progressWrapper"
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:indeterminate="false"
-            android:indeterminateOnly="false"
-            android:maxHeight="2dp"
-            android:minHeight="2dp"
-            android:progressDrawable="@drawable/progress" />
+            android:layout_height="wrap_content"
+            android:background="?progressColor"
+            android:orientation="vertical" >
+
+            <ProgressBar
+                android:id="@+id/activity_bar"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:indeterminate="false"
+                android:indeterminateOnly="false"
+                android:maxHeight="2dp"
+                android:minHeight="2dp"
+                android:progressDrawable="@drawable/progress" />
+        </LinearLayout>
+
+        <android.support.v4.widget.DrawerLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/drawer_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <FrameLayout
+                android:id="@+id/content_frame"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <LinearLayout
+                android:id="@+id/right_drawer"
+                android:layout_width="@dimen/navigation_width"
+                android:layout_height="match_parent"
+                android:layout_gravity="end"
+                android:background="@color/drawer_background"
+                android:clickable="true"
+                android:orientation="vertical" >
+
+                <RelativeLayout
+                    android:id="@+id/bookmark_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/list_bg"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal" >
+
+                    <ImageView
+                        android:id="@+id/starIcon"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="16dp"
+                        android:layout_marginRight="16dp"
+                        android:contentDescription="Favicon"
+                        android:gravity="center_vertical"
+                        android:src="@drawable/ic_action_star" >
+                    </ImageView>
+
+                    <TextView
+                        android:id="@+id/text2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/starIcon"
+                        android:gravity="center_vertical"
+                        android:maxLines="1"
+                        android:minHeight="?android:attr/listPreferredItemHeightSmall"
+                        android:text="@string/action_bookmarks"
+                        android:textAppearance="?android:attr/textAppearanceListItemSmall"
+                        android:textColor="@color/black" />
+                </RelativeLayout>
+
+                <View
+                    android:layout_width="fill_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/gray_list_bg" />
+
+                <ListView
+                    android:id="@+id/right_drawer_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:divider="#bababa"
+                    android:dividerHeight="1dp"
+                    android:listSelector="@drawable/list_bg" />
+            </LinearLayout>
+        </android.support.v4.widget.DrawerLayout>
     </LinearLayout>
 
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/drawer_layout"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <FrameLayout
-            android:id="@+id/content_frame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
- 
-        <LinearLayout
-            android:id="@+id/right_drawer"
-            android:layout_width="@dimen/navigation_width"
-            android:layout_height="match_parent"
-            android:layout_gravity="end"
-            android:background="@color/drawer_background"
-            android:clickable="true"
-            android:orientation="vertical" >
+        <ImageButton
+            android:id="@+id/browser_close_keyboard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="0dp"
+            android:background="@android:color/transparent"
+            android:focusable="false"
+            android:padding="0dp"
+            android:src="@drawable/browser_close_keyboard" />
+    </FrameLayout>
 
-            <RelativeLayout
-                android:id="@+id/bookmark_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/list_bg"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" >
-
-                <ImageView
-                    android:id="@+id/starIcon"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:contentDescription="Favicon"
-                    android:gravity="center_vertical"
-                    android:src="@drawable/ic_action_star" >
-                </ImageView>
-
-                <TextView
-                    android:id="@+id/text2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@+id/starIcon"
-                    android:gravity="center_vertical"
-                    android:maxLines="1"
-                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
-                    android:text="@string/action_bookmarks"
-                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
-                    android:textColor="@color/black" />
-            </RelativeLayout>
-
-            <View
-                android:layout_width="fill_parent"
-                android:layout_height="1dp"
-                android:background="@color/gray_list_bg" />
-
-            <ListView
-                android:id="@+id/right_drawer_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:divider="#bababa"
-                android:dividerHeight="1dp"
-                android:listSelector="@drawable/list_bg" />
-        </LinearLayout>
-    </android.support.v4.widget.DrawerLayout>
-
-</LinearLayout>
+</FrameLayout>
